gz simulation env

--- a/config.json
+++ b/config.json
@@ -1,25 +1,25 @@
 {
     "mission": {
         "start_pos": {
-            "lat": 28.452386,
-            "lon": -13.867138
+            "lat": 47.3977426,
+            "lon": 8.5455928
         },
         "target_area": [
             {
-                "lat": 28.45247,
-                "lon": -13.86714
+                "lat": 47.39779,
+            	"lon": 8.54551
             },
             {
-                "lat": 28.45265,
-                "lon": -13.86714
+                "lat": 47.39771,
+            	"lon": 8.54551
             },
             {
-                "lat": 28.45247,
-                "lon": -13.86690
+                "lat": 47.39779,
+            	"lon": 8.54540
             },
             {
-                "lat": 28.45265,
-                "lon": -13.86690
+                "lat": 47.39771,
+            	"lon": 8.54540
             }
         ]
     }
