Detected to capture CV minimal solution

--- a/config.json
+++ b/config.json
@@ -7,26 +7,33 @@
         "target_img_path": "" 
     },
     "mission": {
-        "start_pos": {
+        "grid_yaw": 135.0,
+        "grid_step": 1,
+        "min_relative_altitude": 2.0,
+        "home": {
             "lat": 47.3977426,
             "lon": 8.5455928
         },
         "target_area": [
             {
-                "lat": 47.39758,
+                "alt": 505,
+                "lat": 47.39715,
+            	"lon": 8.54655
+            },
+            {
+                "alt": 505,
+                "lat": 47.39715,
+            	"lon": 8.54585
+            },
+            {
+                "alt": 505,
+                "lat": 47.39765,
             	"lon": 8.54575
             },
             {
-                "lat": 47.39761,
-            	"lon": 8.54575
-            },
-            {
-                "lat": 47.39758,
-            	"lon": 8.54584
-            },
-            {
-                "lat": 47.39761,
-            	"lon": 8.54584
+                "alt": 505,
+                "lat": 47.39765,
+            	"lon": 8.54645
             }
         ]
     }
