Mission planner V2 to Mission planner & refactored capture stage

--- a/config.json
+++ b/config.json
@@ -14,6 +14,7 @@
             "lat": 47.3977426,
             "lon": 8.5455928
         },
+        "offset": 0.00008,
         "target_area": [
             {
                 "alt": 505,
